[gd_scene load_steps=9 format=3 uid="uid://djgvy3c7wsmng"]

[ext_resource type="Script" path="res://addons/ridiculous_coding/dock.gd" id="1_bwupq"]
[ext_resource type="Texture2D" uid="uid://dsnn50ksl8d4w" path="res://addons/ridiculous_coding/assets/graphics/under.png" id="2_i5c6e"]
[ext_resource type="Texture2D" uid="uid://bmt05lruci7f3" path="res://addons/ridiculous_coding/assets/graphics/progress.png" id="3_52dor"]
[ext_resource type="AudioStream" uid="uid://bnadeocw0wetm" path="res://addons/ridiculous_coding/assets/audio/fireworks.wav" id="4_633xu"]
[ext_resource type="Script" path="res://addons/ridiculous_coding/dock_checkbox.gd" id="5_0ducd"]

[sub_resource type="Gradient" id="Gradient_v1eyn"]
offsets = PackedFloat32Array(0, 0.419689, 0.715026, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.979167, 1, 0.333333, 1, 1, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6lmfn"]
gradient = SubResource("Gradient_v1eyn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x4b51"]
lifetime_randomness = 0.29
spread = 20.0
gravity = Vector3(0, 300, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
scale_min = 5.0
scale_max = 6.0
color_ramp = SubResource("GradientTexture2D_6lmfn")

[node name="Ridiculous Coding Dock" type="Control"]
custom_minimum_size = Vector2(300, 175)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwupq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="XP" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/XP"]
layout_mode = 2

[node name="xpLabel" type="Label" parent="VBoxContainer/XP/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "XP: 1558 / 1850"

[node name="levelLabel" type="Label" parent="VBoxContainer/XP/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level: 8"
horizontal_alignment = 2

[node name="ProgressBar" type="TextureProgressBar" parent="VBoxContainer/XP"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
max_value = 400.0
value = 108.0
nine_patch_stretch = true
texture_under = ExtResource("2_i5c6e")
texture_progress = ExtResource("3_52dor")

[node name="fire1" type="Control" parent="VBoxContainer/XP/ProgressBar"]
layout_mode = 1
anchors_preset = 0

[node name="GPUParticles2D" type="GPUParticles2D" parent="VBoxContainer/XP/ProgressBar/fire1"]
rotation = -0.785397
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_x4b51")

[node name="fire2" type="Control" parent="VBoxContainer/XP/ProgressBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="GPUParticles2D" type="GPUParticles2D" parent="VBoxContainer/XP/ProgressBar/fire2"]
rotation = -2.35619
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_x4b51")

[node name="fireworksTimer" type="Timer" parent="VBoxContainer/XP/ProgressBar"]
wait_time = 3.0

[node name="sfxFireworks" type="AudioStreamPlayer" parent="VBoxContainer/XP/ProgressBar"]
stream = ExtResource("4_633xu")
volume_db = -12.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="explosionCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Explosions"
script = ExtResource("5_0ducd")

[node name="shakeCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Shake"
script = ExtResource("5_0ducd")
type = "shake"

[node name="blipCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Blips"
script = ExtResource("5_0ducd")
type = "blips"

[node name="charsCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
text = "Keys"
script = ExtResource("5_0ducd")
type = "chars"

[node name="soundCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Sound"
script = ExtResource("5_0ducd")
type = "sound"

[node name="fireworksCheckbox" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Fireworks"
script = ExtResource("5_0ducd")
type = "fireworks"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="resetButton" type="Button" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Reset"
